--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^11.0.23",
+    "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fetch-hook": "^1.9.5"
   },
   "devDependencies": {
     "@types/node": "^20",
