--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-fetch-hook": "^1.9.5"
+    "react-fetch-hook": "^1.9.5",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
